Adding Software Bill of Materials option

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -7,3 +7,5 @@ nfpms:
     description: |-
       Sample package generated with GoReleaser.
     license: MIT License
+sboms:
+  - artifacts: archive
